testcases/negative/invalid-doctype.otk
OFFICETALK/1.0
DOCTYPE spreadsheet

AT body/paragraph[1]
SET "Hello"
